# spotify-control

./: .env.template  AppMac  CMakeLists.txt  README.md  STM32F411RETX_FLASH.ld  authorization.py  docker-compose.yml  toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-desktop-release.yml  cmake-desktop-tests.yml  cmake-single-platform.yml
app/: CMakeLists.txt
app/include/: player.h
app/src/: application.c  main.c  player.c
app/test/: main_test.c  player_test.c
desktop_platform/: CMakeLists.txt
desktop_platform/include/: api.h  io.h
desktop_platform/libs/parson/: CMakeLists.txt
desktop_platform/src/: api.c  io.c
docker/: Dockerfile  docker-compose.yml
embedded_platform/: CMakeLists.txt
embedded_platform/Drivers/Inc/: stm32f411xx.h  stm32f411xx_gpio.h
embedded_platform/Drivers/Src/: stm32f411xx_gpio.c
embedded_platform/include/: api.h  io.h
embedded_platform/src/: api.c  io.c
embedded_platform/stm32/: CMakeLists.txt
embedded_platform/stm32/core/: CMakeLists.txt
embedded_platform/stm32/device/: CMakeLists.txt
embedded_platform/stm32/hal/: CMakeLists.txt
libs/unity/: CMakeLists.txt
main/: CMakeLists.txt
main/src/: main.c
player/: CMakeLists.txt
player/src/application/: application.c  application.h
src/: main.c
src/api/: api.c  api.h
src/application/: application.c
src/io/: io.c  io.h
src/player/: player.c  player.h
